--- a/css/person.css
+++ b/css/person.css
@@ -1,23 +1,28 @@
 .person {
-text-align: center;
-width: 18%;
-padding: 0 25px;
+  text-align: center;
+  max-width: 22%;
+  min-width: 300px;
+  padding: 0 25px 100px;
 }
+
 .person__img {
   width: 75px;
   height: 75px;
   border-radius: 3px;
 }
+
 .person__name {
   color: white;
   font-size: 19px;
   text-transform: uppercase;
   padding-top: 20px;
 }
+
 .person__title {
   color: #ff6d6d;
   padding-top: 8px;
 }
+
 .person__desc {
   color: white;
   padding-top: 25px;
